# reward-wallet

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
backups/: backup_2025-06-29 11-14-12.json  backup_2025-06-29 11-14-57.json  backup_2025-06-29 11-16-56.json  backup_2025-06-29 11-22-40.json  backup_2025-06-29 11-35-37.json  backup_2025-06-29 11-54-15.json  backup_2025-06-29 13-56-10.json  backup_2025-06-29 13-56-39.json  backup_2025-06-29 14-46-43.json
data/: users.json
include/: auth.h  cli.h  data_manager.h  main.h  otp.h  sha256.h  user_account.h  utils.h  wallet.h
src/: auth.cpp  cli.cpp  cli2.cpp  data_manager.cpp  main  main.cpp  otp.cpp  sha256.cpp  user_account.cpp  utils.cpp  wallet.cpp
